index: Fix squashed text / space removal bug

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -861,13 +861,10 @@ h1 span.fa, h2 span.fa, h3 span.fa, h4 span.fa, h5 span.fa, h6 span.fa {
     height: 30px;
     margin: 0 25px 0 0;
 }
-.mainlist-item div {
+.mainlist-item p {
     font-weight: 600;
     font-size: 106.25%;
     color: #13161F;
-}
-.mainlist-item div br {
-    display: none;
 }
 .home-title {
     margin: 0 0 50px;
